refactor: 重构作用域和组件提供者逻辑
将作用域处理逻辑提取为独立的 ScopeProvider 接口，并重构组件绑定流程。创建了 ComponentProvider 接口和 SingletonProvider 实现类，使代码结构更清晰。同时优化了注解分组和验证逻辑。